--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.2",
-    "sass": "^1.69.7"
+    "sass": "^1.69.7",
+    "sqlite3": "^5.1.7"
   }
 }
