--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.2",
     "sass": "^1.69.7",
+    "@pinia/nuxt": "^0.5.1",
+    "pinia": "^2.1.7",
     "sqlite3": "^5.1.7",
     "three": "^0.160.0"
   }
